--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "private": false,
   "author": "ilmar7786",
   "sideEffects": false,
-  "main": "dist/index.cjs",
+  "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     "import": "./dist/index.mjs",
-    "require": "./dist/index.cjs"
+    "require": "./dist/index.js"
   },
   "scripts": {
     "build": "tsup",
