--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "marzban-sdk",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "license": "MIT",
-  "description": "Fully typed and implementing all marzban methods",
+  "description": "The Marzban SDK is a fully typed client library for interacting with the Marzban API. It works in both browser and Node.js environments",
   "private": false,
   "author": "ilmar7786",
   "sideEffects": false,
@@ -20,6 +20,7 @@
     "codegen": "rm -rf src/generated-sources; openapi-generator-cli generate -i ./openapi/openapi.json -g typescript-axios -o src/generated-sources --additional-properties=supportsES6=true,npmVersion=6.9.0,typescriptThreePlus=true --template-dir ./codegen/typescript-axios"
   },
   "keywords": [
+    "marzban-sdk",
     "marzban",
     "marzban api",
     "marzban api client",
@@ -36,7 +37,6 @@
     "xray",
     "trojan",
     "wireguard",
-    "ssr",
     "vmess",
     "vless",
     "hysteria",
