--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish to npm and github release
+name: Publish to npm
 
 on:
   push:
@@ -17,41 +17,3 @@ jobs:
       - uses: JS-DevTools/npm-publish@v3
         with:
           token: ${{ secrets.NPM_TOKEN }}
-      - name: Get package version
-        id: get_version
-        run: echo "VERSION=$(node -p -e "require('./package.json').version")" >> $GITHUB_ENV
-      - name: Generate Release Notes
-        id: generate_release_notes
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const { generateReleaseNotes } = require('@actions/github/lib/utils');
-            const { data: releaseNotes } = await generateReleaseNotes({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              tag_name: `v${{ env.VERSION }}`,
-              target_commitish: context.sha,
-              name: `v${{ env.VERSION }}`,
-              body: '',
-            });
-            return releaseNotes.body;
-          result-encoding: string
-      - name: Create Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v${{ env.VERSION }}
-          release_name: ${{ env.VERSION }}
-          body: ${{ steps.generate_release_notes.outputs.result }}
-          draft: false
-          prerelease: false
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist
-          asset_name: dist.zip
-          asset_content_type: application/zip
