--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "clean": "rimraf dist",
     "dev": "tsup --watch",
     "codegen": "rm -rf src/generated-sources; openapi-generator-cli generate -i ./openapi/openapi.json -g typescript-axios -o src/generated-sources --additional-properties=supportsES6=true,npmVersion=6.9.0,typescriptThreePlus=true --template-dir ./codegen/typescript-axios",
-    "generate:docs": "node ./tools/generateDocs.js"
+    "generate:docs": "node ./tools/generateDocs.js",
+    "commitlint": "commitlint --edit",
+    "prepare": "husky",
+    "format": "prettier --write .",
+    "lint": "eslint --fix ."
   },
   "keywords": [
     "marzban-sdk",
@@ -59,14 +63,27 @@
     "ws": "^8.18.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@eslint/js": "^9.26.0",
     "@openapitools/openapi-generator-cli": "^2.20.0",
+    "@rollup/rollup-win32-x64-msvc": "^4.40.1",
     "@types/node": "^22.13.14",
     "@types/ws": "^8.18.0",
     "esbuild": "^0.25.0",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
+    "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "tsup": "^8.3.6",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.31.1"
   },
   "repository": {
     "type": "git",
