--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "scripts": {
     "build": "tsup",
+    "rimraf": "rimraf",
     "clean": "rimraf dist",
     "dev": "tsup --watch",
-    "codegen": "rm -rf src/generated-sources; openapi-generator-cli generate -i ./openapi/openapi.json -g typescript-axios -o src/generated-sources --additional-properties=supportsES6=true,npmVersion=6.9.0,typescriptThreePlus=true --template-dir ./codegen/typescript-axios",
+    "codegen": "openapi-generator-cli generate --generator-key v1",
+    "openapi-generator-cli": "openapi-generator-cli",
     "generate:docs": "node ./tools/generateDocs.js",
     "commitlint": "commitlint --edit",
     "prepare": "husky",
