--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
   "dependencies": {
     "axios": "^1.11.0",
     "axios-retry": "^4.5.0",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
