--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "axios-retry": "^4.5.0",
+    "chalk": "^5.6.2",
     "ws": "^8.18.3",
     "zod": "^4.0.17"
   },
