--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marzban-sdk",
-  "version": "1.4.3",
+  "version": "1.4.4",
   "license": "MIT",
   "description": "Fully typed client SDK for the Marzban API, supporting both browser and Node.js environments.",
   "private": false,
@@ -87,7 +87,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Ilmar7786/marzban-sdk.git"
+    "url": "git+https://github.com/Ilmar7786/marzban-sdk.git"
   },
   "bugs": {
     "url": "https://github.com/Ilmar7786/marzban-sdk/issues"
